--- a/sass/components/_benefits.scss
+++ b/sass/components/_benefits.scss
@@ -1,11 +1,37 @@
 .benefits {
-  display: flex;
-  align-items: center;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+  }
 }
 .benefits__item {
-  width: 270px;
-  &:not(:last-child) {
+  display: inline-block;
+  @media screen and (max-width: 767px) {
+    max-width: 450px;
+    margin-bottom: 30px;
+    &:nth-last-child(-n + 1) {
+      margin-bottom: 0;
+    }
+  }
+  @media screen and (min-width: 768px) {
+    width: 352px;
     margin-right: 30px;
+    margin-bottom: 30px;
+    &:nth-child(2n) {
+      margin-right: 0;
+    }
+    &:nth-last-child(-n + 2) {
+      margin-bottom: 0;
+    }
+  }
+  @media screen and (min-width: 1200px) {
+    width: 270px;
+    &:not(:last-child) {
+      margin-right: 30px;
+    }
   }
 }
 
@@ -17,8 +43,10 @@
   text-transform: uppercase;
   color: $litle-text-color;
   margin-bottom: 10px;
-  align-items: center;
   text-transform: uppercase;
+  @media screen and (max-width: 767px) {
+    text-align: center;
+  }
 }
 .benefits__text {
   font-weight: 400;
@@ -26,6 +54,9 @@
   line-height: 1.7;
   color: $primary-text-color;
   letter-spacing: 0.03em;
+  margin: 0;
+  padding: 0;
+  margin-top: 10px;
 }
 .benefits__icon {
   width: 70px;
