--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -17,7 +17,7 @@
   font-size: 18px;
   line-height: 1.22;
   letter-spacing: 0.02em;
-  color: $hover-collor-text;
+  color: $accent-color;
 }
 .menu__line {
   border: 1px solid rgba(33, 33, 33, 0.2);
