--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,17 @@
 @charset "UTF-8";
 /* сброс стилей */
+@media screen and (min-width: 320px) {
+  body {
+    overflow-x: hidden;
+  }
+}
+
+@media screen and (max-width: 319px) {
+  body {
+    overflow-x: visible;
+  }
+}
+
 ul {
   margin: 0;
   padding: 0;
@@ -314,19 +326,64 @@ summary {
   color: #ffffff;
 }
 
+.header {
+  border-bottom: 1px solid #ececec;
+}
+
 .header__content {
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-.header {
-  border-bottom: 1px solid #e5e5e5;
+@media screen and (max-width: 767px) {
+  .header__content {
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    max-width: 480px;
+  }
+}
+
+.menu-button {
+  width: 40px;
+  height: 40px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0 0;
+  border: 0;
+  background-color: transparent;
+  display: block;
+}
+
+.menu-button.menu-icon {
+  fill: currentColor;
+}
+
+.menu-button:hover, .menu-button:focus {
+  fill: #2196f3;
+}
+
+@media screen and (min-width: 768px) {
+  .menu-button {
+    display: none;
+  }
 }
 
 .nav {
@@ -340,142 +397,178 @@ summary {
   display: flex;
 }
 
+@media screen and (max-width: 767px) {
+  .nav__list {
+    display: block;
+  }
+}
+
 .nav__link:hover .contact__icon,
 .nav__link:focus .contact__icon {
   fill: var(--accent-color);
 }
 
-.nav__item {
-  margin-right: 50px;
+@media screen and (max-width: 767px) {
+  .nav__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
 }
 
-.nav__item:last-child {
-  margin-right: 0;
+@media screen and (min-width: 768px) {
+  .nav__item:not(:last-child) {
+    margin-right: 50px;
+  }
 }
 
 .nav__link {
-  position: relative;
-  display: block;
-  padding: 32px 0;
-  color: #212121;
-  text-decoration: none;
   font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14x;
   letter-spacing: 0.02em;
+  color: #212121;
   -webkit-transition: color cubic-bezier(0.4, 0, 0.2, 1) 250ms;
   -o-transition: color cubic-bezier(0.4, 0, 0.2, 1) 250ms;
   transition: color cubic-bezier(0.4, 0, 0.2, 1) 250ms;
 }
 
-.nav__link:hover, .nav__link:focus {
-  color: #2196f3;
-  display: block;
+@media screen and (max-width: 767px) {
+  .nav__link {
+    font-style: normal;
+    font-size: 40px;
+    line-height: 1.17;
+    text-align: center;
+  }
 }
 
-.nav__link--current {
-  position: relative;
-  display: block;
-  padding: 32px 0;
-  color: #212121;
-  text-decoration: none;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14x;
-  letter-spacing: 0.02em;
-  -webkit-transition: color cubic-bezier(0.4, 0, 0.2, 1) 250ms;
-  -o-transition: color cubic-bezier(0.4, 0, 0.2, 1) 250ms;
-  transition: color cubic-bezier(0.4, 0, 0.2, 1) 250ms;
-}
-
-.nav__link--current:hover, .nav__link--current:focus {
-  color: #2196f3;
-  display: block;
-}
-
-.nav__link--current::after {
-  position: absolute;
-  content: "";
-  display: block;
-  width: 100%;
-  height: 4px;
-  bottom: -1px;
-  -webkit-border-radius: 2px;
-          border-radius: 2px;
-  background-color: #2196f3;
+@media screen and (min-width: 768px) {
+  .nav__link {
+    position: relative;
+    font-size: 14px;
+    line-height: 1.14;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    padding: 32px 0;
+  }
+  .nav__link:hover, .nav__link:focus {
+    color: #2196f3;
+  }
 }
 
 .nav__link--current {
   color: #2196f3;
+}
+
+@media screen and (min-width: 768px) {
+  .nav__link--current::after {
+    position: absolute;
+    content: "";
+    display: block;
+    width: 100%;
+    height: 4px;
+    bottom: -1px;
+    -webkit-border-radius: 2px;
+            border-radius: 2px;
+    background-color: #2196f3;
+  }
 }
 
 .contact {
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
   margin-left: auto;
 }
 
-.contact__icon {
-  margin-right: 10px;
-  fill: currentColor;
+@media screen and (max-width: 767px) {
+  .contact {
+    margin-top: 302px;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+    -webkit-flex-direction: column-reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
 }
 
-.contact__item + .contact__item {
-  margin-left: 50px;
+@media screen and (min-width: 1200px) {
+  .contact {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+.contact__icon {
+  fill: currentColor;
+  margin-right: 10px;
+}
+
+@media screen and (max-width: 767px) {
+  .contact__icon {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .contact__item:not(:last-child) {
+    margin-right: 50px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .contact__item:not(:first-child) {
+    margin-bottom: 30px;
+  }
 }
 
 .contact__link {
-  color: #757575;
-  text-decoration: none;
+  display: -webkit-inline-box;
+  display: -webkit-inline-flex;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
   font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
   letter-spacing: 0.02em;
   -webkit-box-align: center;
   -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
+  text-decoration: none;
+  font-size: 34px;
+  line-height: 1.17;
+  color: #2196f3;
   -webkit-transition: color cubic-bezier(0.4, 0, 0.2, 1) 250ms;
   -o-transition: color cubic-bezier(0.4, 0, 0.2, 1) 250ms;
   transition: color cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+}
+
+@media screen and (min-width: 768px) {
+  .contact__link {
+    padding: 10px 0;
+    font-size: 14px;
+    line-height: 1.14;
+  }
 }
 
 .contact__link:hover, .contact__link:focus {
   color: #2196f3;
 }
 
-.contact__link--current {
-  color: #757575;
-  text-decoration: none;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-transition: color cubic-bezier(0.4, 0, 0.2, 1) 250ms;
-  -o-transition: color cubic-bezier(0.4, 0, 0.2, 1) 250ms;
-  transition: color cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+@media screen and (min-width: 1200px) {
+  .contact__link {
+    padding: 32px 0;
+  }
 }
 
-.contact__link--current:hover, .contact__link--current:focus {
-  color: #2196f3;
+@media screen and (max-width: 767px) {
+  .contact__link-text {
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 1.16;
+    letter-spacing: 0.02em;
+    color: #757575;
+  }
 }
 
 .hero {
@@ -547,23 +640,62 @@ summary {
           border-radius: 4px;
 }
 
-.benefits {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
+@media screen and (min-width: 768px) {
+  .benefits {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .benefits {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+  }
 }
 
 .benefits__item {
-  width: 270px;
+  display: inline-block;
 }
 
-.benefits__item:not(:last-child) {
-  margin-right: 30px;
+@media screen and (max-width: 767px) {
+  .benefits__item {
+    max-width: 450px;
+    margin-bottom: 30px;
+  }
+  .benefits__item:nth-last-child(-n + 1) {
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .benefits__item {
+    width: 352px;
+    margin-right: 30px;
+    margin-bottom: 30px;
+  }
+  .benefits__item:nth-child(2n) {
+    margin-right: 0;
+  }
+  .benefits__item:nth-last-child(-n + 2) {
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .benefits__item {
+    width: 270px;
+  }
+  .benefits__item:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 
 .benefits__title {
@@ -574,11 +706,13 @@ summary {
   text-transform: uppercase;
   color: #212121;
   margin-bottom: 10px;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
   text-transform: uppercase;
+}
+
+@media screen and (max-width: 767px) {
+  .benefits__title {
+    text-align: center;
+  }
 }
 
 .benefits__text {
@@ -587,6 +721,9 @@ summary {
   line-height: 1.7;
   color: #757575;
   letter-spacing: 0.03em;
+  margin: 0;
+  padding: 0;
+  margin-top: 10px;
 }
 
 .benefits__icon {
@@ -1533,10 +1670,136 @@ img {
   padding: 94px 0;
 }
 
+@media screen and (max-width: 1199px) {
+  .section {
+    padding: 60px 0;
+  }
+}
+
 .container {
-  width: 1200px;
   margin-left: auto;
   margin-right: auto;
   padding: 0px 15px;
+}
+
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .menu {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    margin-top: 64px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .menu {
+    display: none;
+  }
+}
+
+.menu__item:not(:last-child) {
+  margin-right: auto;
+}
+
+.menu__link {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: #2196f3;
+}
+
+.menu__line {
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  -webkit-transform: rotate(90deg);
+      -ms-transform: rotate(90deg);
+          transform: rotate(90deg);
+}
+
+.mobile-menu {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 1;
+  -webkit-flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  z-index: 1;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+@media screen and (max-width: 767px) {
+  .mobile-menu {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 11199px) {
+  .mobile-menu {
+    margin-left: 83px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .mobile-menu {
+    margin-left: 93px;
+  }
+}
+
+.mobile-menu.is-open {
+  max-width: 767px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  overflow-y: scroll;
+  display: block;
+  background-color: white;
+  width: auto;
+  height: auto;
+  padding: 48px 40px;
+  -webkit-box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
+          box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
+}
+
+.mobile-menu__close {
+  position: absolute;
+  top: 21px;
+  right: 23px;
+  border: transparent;
+  background: transparent;
+}
+
+@media screen and (min-width: 768px) {
+  .mobile-menu__close {
+    display: none;
+  }
+}
+
+.mobile-menu__close:hover, .mobile-menu__close:focus {
+  fill: #2196f3;
 }
 /*# sourceMappingURL=main.css.map */
