--- a/sass/base/_defaults.scss
+++ b/sass/base/_defaults.scss
@@ -1,4 +1,13 @@
 /* сброс стилей */
+body {
+  @media screen and (min-width: 320px) {
+    overflow-x: hidden;
+  }
+  @media screen and (max-width: 319px) {
+    overflow-x: visible;
+  }
+}
+
 ul {
   margin: 0;
   padding: 0;
@@ -25,20 +34,4 @@ li {
 /* Сброс подчеркивания всех ссылок */
 a {
   text-decoration: none;
-}
-.container {
-  margin-left: auto;
-  margin-right: auto;
-  padding: 0px 15px;
-  @media screen and (min-width: 480px) {
-    width: 480px;
-  }
-
-  @media screen and (min-width: 768px) {
-    width: 768px;
-  }
-
-  @media screen and (min-width: 1200px) {
-    width: 1200px;
-  }
 }
