--- a/sass/components/_contact.scss
+++ b/sass/components/_contact.scss
@@ -1,42 +1,66 @@
 .contact {
-  align-items: center;
-  display: flex;
   margin-left: auto;
+  @media screen and (max-width: 767px) {
+    margin-top: 302px;
+
+    display: flex;
+    flex-direction: column-reverse;
+  }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+  }
 }
 .contact__icon {
-  margin-right: 10px;
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
   fill: currentColor;
+  margin-right: 10px;
 }
-.contact__item + .contact__item {
-  margin-left: 50px;
+
+.contact__item {
+  @media screen and (min-width: 1200px) {
+    &:not(:last-child) {
+      margin-right: 50px;
+    }
+  }
+  @media screen and (max-width: 767px) {
+    &:not(:first-child) {
+      margin-bottom: 30px;
+    }
+  }
 }
 .contact__link {
-  color: $primary-text-color;
-  text-decoration: none;
+  display: inline-flex;
   font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
   letter-spacing: 0.02em;
+  @media screen and (min-width: 768px) {
+    padding: 10px 0;
+    font-size: 14px;
+    line-height: 1.14;
+  }
   align-items: center;
-  display: flex;
+  text-decoration: none;
+  font-size: 34px;
+  line-height: 1.17;
+
+  color: $accent-color;
   transition: color $time-function $transition-duration;
   &:hover,
   &:focus {
     color: $accent-color;
   }
+
+  @media screen and (min-width: 1200px) {
+    padding: 32px 0;
+  }
 }
-.contact__link--current {
-  color: $primary-text-color;
-  text-decoration: none;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  align-items: center;
-  display: flex;
-  transition: color $time-function $transition-duration;
-  &:hover,
-  &:focus {
-    color: $accent-color;
+.contact__link-text {
+  @media screen and (max-width: 767px) {
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 1.16;
+    letter-spacing: 0.02em;
+    color: $primary-text-color;
   }
 }
