--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,7 +1,35 @@
-.header__content {
-  align-items: center;
-  display: flex;
-}
 .header {
-  border-bottom: 1px solid #e5e5e5;
+  border-bottom: 1px solid #ececec;
+}
+
+.header__content {
+  display: flex;
+  align-items: center;
+  @media screen and (max-width: 767px) {
+    justify-content: space-between;
+    max-width: 480px;
+  }
+}
+.menu-button {
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 0;
+  border: 0;
+  background-color: transparent;
+
+  display: block;
+  &.menu-icon {
+    fill: currentColor;
+  }
+
+  &:hover,
+  &:focus {
+    fill: $accent-color;
+  }
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
 }
