--- a/sass/components/_navigate.scss
+++ b/sass/components/_navigate.scss
@@ -4,67 +4,69 @@
 
 .nav__list {
   display: flex;
+  @media screen and (max-width: 767px) {
+    display: block;
+  }
 }
+
 .nav__link:hover .contact__icon,
 .nav__link:focus .contact__icon {
   fill: var(--accent-color);
 }
 
 .nav__item {
-  margin-right: 50px;
-}
-.nav__item:last-child {
-  margin-right: 0;
+  @media screen and (max-width: 767px) {
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
+  }
+  @media screen and (min-width: 768px) {
+    &:not(:last-child) {
+      margin-right: 50px;
+    }
+  }
 }
 
 .nav__link {
-  position: relative;
-  display: block;
-  padding: 32px 0;
-  color: $litle-text-color;
-  text-decoration: none;
   font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14x;
   letter-spacing: 0.02em;
+  color: $litle-text-color;
   transition: color $time-function $transition-duration;
+  @media screen and (max-width: 767px) {
+    font-style: normal;
 
-  &:hover,
-  &:focus {
-    color: $accent-color;
-    display: block;
+    font-size: 40px;
+    line-height: 1.17;
+    text-align: center;
+  }
+  @media screen and (min-width: 768px) {
+    position: relative;
+
+    font-size: 14px;
+    line-height: 1.14;
+
+    display: flex;
+    padding: 32px 0;
+
+    &:hover,
+    &:focus {
+      color: $accent-color;
+    }
   }
 }
 .nav__link--current {
-  position: relative;
-  display: block;
-  padding: 32px 0;
-  color: $litle-text-color;
-  text-decoration: none;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14x;
-  letter-spacing: 0.02em;
-  transition: color $time-function $transition-duration;
-
-  &:hover,
-  &:focus {
-    color: $accent-color;
-    display: block;
-  }
+  color: $accent-color;
 }
 
 .nav__link--current::after {
-  position: absolute;
-  content: "";
-  display: block;
-  width: 100%;
-  height: 4px;
-  bottom: -1px;
-  border-radius: 2px;
-  background-color: #2196f3;
-}
-
-.nav__link--current {
-  color: $accent-color;
+  @media screen and (min-width: 768px) {
+    position: absolute;
+    content: "";
+    display: block;
+    width: 100%;
+    height: 4px;
+    bottom: -1px;
+    border-radius: 2px;
+    background-color: $accent-color;
+  }
 }
