--- a/css/main.css
+++ b/css/main.css
@@ -675,7 +675,7 @@ summary {
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .benefits__item {
     width: 352px;
     margin-right: 30px;
@@ -791,6 +791,10 @@ summary {
   position: relative;
 }
 
+.occupation__item:not(:last-child) {
+  margin-right: 30px;
+}
+
 .occupation__item {
   display: -webkit-box;
   display: -webkit-flex;
@@ -802,10 +806,6 @@ img {
   display: block;
   max-width: 100%;
   height: auto;
-}
-
-.occupation__item:not(:last-child) {
-  margin-right: 30px;
 }
 
 .team {
@@ -913,11 +913,19 @@ img {
 }
 
 .company {
-  text-decoration: none;
+  -webkit-text-decoration: note;
+          text-decoration: note;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
 }
 
 .company__link {
@@ -955,13 +963,41 @@ img {
   border: 1px solid #2196f3;
 }
 
-.company__item {
-  width: 170px;
-  height: 92px;
+@media screen and (max-width: 767px) {
+  .company__item {
+    width: -webkit-calc((100% - 30px) / 2);
+    width: calc((100% - 30px) / 2);
+    height: 90px;
+  }
+  .company__item:not(:nth-child(2n)) {
+    margin-right: 30px;
+  }
+  .company__item:not(:nth-last-child(-n + 2)) {
+    margin-bottom: 30px;
+  }
 }
 
-.company__item:not(:last-child) {
-  margin-right: 30px;
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .company__item {
+    width: -webkit-calc((100% - 60px) / 3);
+    width: calc((100% - 60px) / 3);
+  }
+  .company__item:not(:nth-child(3n)) {
+    margin-right: 30px;
+  }
+  .company__item:not(:nth-last-child(-n + 3)) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .company__item {
+    width: -webkit-calc((100% - 6 * 30px) / 6);
+    width: calc((100% - 6 * 30px) / 6);
+  }
+  .company__item:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 
 .company__icon {
@@ -1654,6 +1690,12 @@ img {
 
 .section.section--no--padding__top {
   padding-top: 0;
+}
+
+@media screen and (max-width: 1199px) {
+  .section.section--no--padding__top {
+    display: none;
+  }
 }
 
 .section__title {
