--- a/sass/components/_benefits.scss
+++ b/sass/components/_benefits.scss
@@ -16,7 +16,7 @@
       margin-bottom: 0;
     }
   }
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
     width: 352px;
     margin-right: 30px;
     margin-bottom: 30px;
