--- a/sass/components/_company.scss
+++ b/sass/components/_company.scss
@@ -1,6 +1,11 @@
 .company {
   text-decoration: none;
+  justify-content: center;
   display: flex;
+  flex-wrap: wrap;
+  @media screen and (min-width: 1200px) {
+    display: flex;
+  }
 }
 .company__link {
   width: 100%;
@@ -21,14 +26,34 @@
   }
 }
 .company__item {
-  width: 170px;
-  height: 92px;
+  @media screen and (max-width: 767px) {
+    width: calc((100% - 30px) / 2);
+    height: 90px;
+    &:not(:nth-child(2n)) {
+      margin-right: 30px;
+    }
+    &:not(:nth-last-child(-n + 2)) {
+      margin-bottom: 30px;
+    }
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    width: calc((100% - 60px) / 3);
+    &:not(:nth-child(3n)) {
+      margin-right: 30px;
+    }
+    &:not(:nth-last-child(-n + 3)) {
+      margin-bottom: 30px;
+    }
+  }
+  @media screen and (min-width: 1200px) {
+    width: calc((100% - 6 * 30px) / 6);
+    &:not(:last-child) {
+      margin-right: 30px;
+    }
+  }
 }
-.company__item:not(:last-child) {
-  margin-right: 30px;
-}
+
 .company__icon {
-  width: 106px;
-  height: 60px;
   fill: currentColor;
 }
