--- a/sass/components/_footer-address.scss
+++ b/sass/components/_footer-address.scss
@@ -1,6 +1,14 @@
 .address__block {
-  flex-grow: 1;
-  margin-right: 70px;
+  @media screen and (max-width: 767px) {
+    margin-bottom: 60px;
+  }
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    margin-right: 165px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-right: 70px;
+    flex-grow: 1;
+  }
 }
 .address {
   font-style: normal;
