--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -3,8 +3,19 @@
   background-color: #2f303a;
 }
 .container__footer {
-  display: flex;
   align-items: baseline;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  @media screen and (max-width: 1199px) {
+    text-align: center;
+  }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+  }
 }
 .footer__form {
   display: inline-flex;
