--- a/sass/components/_section.scss
+++ b/sass/components/_section.scss
@@ -27,6 +27,9 @@
 }
 .section.section--no--padding__top {
   padding-top: 0;
+  @media screen and (max-width: 1199px) {
+    display: none;
+  }
 }
 .section__title {
   color: $litle-text-color;
@@ -35,7 +38,10 @@
   line-height: 1.16;
   text-align: center;
   margin: 0;
-  margin-bottom: 50px;
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 50px;
+  }
+  margin-bottom: 30px;
 }
 .section {
   padding: 94px 0;
