--- a/sass/base/_defaults.scss
+++ b/sass/base/_defaults.scss
@@ -13,6 +13,14 @@ ul {
   padding: 0;
   list-style: none;
 }
+
+img {
+  max-width: 100%;
+  height: auto;
+  width: auto;
+  display: block;
+}
+
 h1,
 h2,
 h3,
