--- a/sass/components/_footer-address.scss
+++ b/sass/components/_footer-address.scss
@@ -18,9 +18,8 @@
   margin-top: 20px;
 }
 .address__section {
-  margin-bottom: 0;
-  padding: 0;
-  display: inline;
+  list-style-type: none;
+  margin-top: 20px;
 }
 .address__item:not(:last-child) {
   margin-bottom: 9px;
@@ -47,4 +46,9 @@
   color: $primary-text-color;
   text-decoration: none;
   font-style: normal;
+  transition: color $transition-duration $time-function;
+  &:focus,
+  &:hover {
+    color: $accent-color;
+  }
 }
