--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -4,12 +4,24 @@
   width: 528px;
   background-color: $additional-color;
   position: absolute;
+  max-width: 450px;
   top: 50%;
   left: 50%;
   transition-timing-function: $time-function;
   transition-property: transform;
   transition-duration: $transition-duration;
   transform: translate(-50%, -50%) scale(1);
+  @media screen and (max-width: 767px) {
+    width: 100%;
+  }
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    width: 450px;
+    top: 35%;
+  }
+  @media screen and (min-width: 1200px) {
+    max-width: 528px;
+    top: 40%;
+  }
 }
 
 .modal__title {
@@ -27,8 +39,11 @@
 }
 .button-wrapper {
   display: flex;
-  margin-top: 30px;
-  justify-content: center;
+  flex-direction: column;
+  position: relative;
+  &:not(:last-child) {
+    margin-bottom: 10px;
+  }
 }
 .form-feedback__button {
   padding: 10px 55px;
@@ -69,6 +84,12 @@
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: $primary-text-color;
+  align-items: center;
+  justify-content: center;
+  @media screen and (max-width: 1199px) {
+    font-size: 12px;
+    line-height: 1.1;
+  }
 }
 .form-feedback__policy .form-feedback__link {
   text-decoration-line: underline;
@@ -80,15 +101,13 @@
   position: relative;
   margin-bottom: 28px;
 }
-.form__wrapper:not(:last-child) {
-  margin-bottom: 10px;
-}
+
 .form__wrapper:checked {
   color: $accent-color;
 }
 .form-feedback__comment {
-  width: 448px;
-  height: 120px;
+  width: 100%;
+  height: 120%;
   padding: 12px 16px;
   font-weight: 400;
   font-size: 12px;
