--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,7 +13,7 @@
 @import "./components/company";
 @import "./components/footer";
 @import "./components/footer-address";
-@import "./components/footer-network";
+// @import "./components/footer-network";
 @import "./components/subscribe";
 @import "./components/backdrop";
 @import "./components/modal";
