--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -10,7 +10,7 @@
   }
 }
 
-.overlay {
+.hero.overlay {
   max-width: auto;
   height: 400px;
   margin-left: auto;
@@ -23,7 +23,7 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url("../img/hero/mobile/mobile.jpg");
+    url("./img/hero/mobile/mobile1x.jpg");
   @media screen and (min-device-pixel-ratio: 2),
     screen and (min-resolution: 192dpi),
     screen and (min-resolution: 2dppx) {
@@ -32,7 +32,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("../img/hero/mobile/mobile2x.jpg");
+      url("./img/hero/mobile/mobile2x.jpg");
   }
 
   @media screen and (min-width: 768px) and (max-width: 1199px) {
@@ -41,7 +41,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("../img/hero/tablet/tablet.jpg");
+      url("./img/hero/tablet/tablet1x.jpg");
   }
   @media screen and (min-device-pixel-ratio: 2),
     screen and (min-resolution: 192dpi),
@@ -51,7 +51,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("../img/hero/tablet/tablet2x.jpg");
+      url("./img/hero/tablet/tablet2x.jpg");
   }
   @media screen and (min-width: 1200px) {
     height: 600px;
@@ -63,7 +63,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("../img/hero/pc/pc.jpg");
+      url("./img/hero/pc/pc.jpg");
   }
   @media screen and (min-device-pixel-ratio: 2),
     screen and (min-resolution: 192dpi),
@@ -73,7 +73,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("../img/hero/pc/pc2x.jpg");
+      url("./img/hero/pc/pc2x.jpg");
   }
 }
 
