--- a/sass/components/_portfolio-filters.scss
+++ b/sass/components/_portfolio-filters.scss
@@ -1,10 +1,33 @@
 .filters {
-  margin-bottom: 50px;
   display: flex;
-  justify-content: center;
+
+  @media screen and (max-width: 767px) {
+    width: 450px;
+    flex-wrap: wrap;
+    margin-bottom: 40px;
+  }
+  @media screen and (min-width: 768px) {
+    margin-bottom: 50px;
+    justify-content: center;
+  }
 }
-.filters__item + .filters__item {
-  margin-left: 8px;
+
+.filters__item {
+  @media screen and (max-width: 767px) {
+    margin-right: 8px;
+    margin-bottom: 15px;
+    &:nth-child(3n) {
+      margin-right: 0;
+    }
+    &:nth-last-child(-n + 2) {
+      margin-bottom: 0px;
+    }
+  }
+  @media screen and (min-width: 768px) {
+    &:not(:last-child) {
+      margin-right: 8px;
+    }
+  }
 }
 
 .filters__button--current {
