--- a/sass/components/_portfolio-project.scss
+++ b/sass/components/_portfolio-project.scss
@@ -6,6 +6,10 @@
   position: relative;
   overflow: hidden; /* скрыто */
 }
+
+.project__img {
+  width: 450px;
+}
 .project__description {
   position: absolute;
   bottom: 0;
@@ -57,26 +61,50 @@
   margin-right: auto;
 }
 .project__item {
-  width: calc((100% - 90px) / 3);
-  margin-right: 30px;
   margin-bottom: 30px;
-  border: 1px solid #eeeeee;
+
+  @media screen and (max-width: 767px) {
+    width: 450px;
+    &:nth-last-child(-n + 1) {
+      margin-bottom: 0px;
+    }
+  }
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    width: 354px;
+    margin-right: 30px;
+    &:nth-child(2n) {
+      margin-right: 0px;
+    }
+    &:nth-last-child(-n + 2) {
+      margin-bottom: 0px;
+    }
+  }
+  @media screen and (min-width: 1200px) {
+    width: 370px;
+    margin-right: 30px;
+    &:nth-child(3n) {
+      margin-right: 0px;
+    }
+    &:nth-last-child(-n + 1) {
+      margin-bottom: 0px;
+    }
+  }
 }
-.project__item:nth-child(3n) {
-  margin-right: 0px;
-}
-.project__item:nth-last-child(-n + 3) {
-  margin-bottom: 0px;
-}
+
 .project__thumb {
-  padding: 24px 20px 24px 20px;
+  border: 1px solid #eeeeee;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 24px;
 }
 .project__link {
   display: block;
   text-decoration: none;
-}
-.project__link:hover,
-.project__link:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
+
+  transition: box-shadow $transition-duration $time-function;
+  &:focus,
+  &:hover {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
 }
