--- a/sass/components/_contact.scss
+++ b/sass/components/_contact.scss
@@ -44,7 +44,7 @@
   font-size: 34px;
   line-height: 1.17;
 
-  color: $accent-color;
+  color: $primary-text-color;
   transition: color $time-function $transition-duration;
   &:hover,
   &:focus {
