--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -24,9 +24,7 @@
       rgba(47, 48, 58, 0.4)
     ),
     url("../img/hero/mobile/mobile1x.jpg");
-  @media screen and (min-device-pixel-ratio: 2),
-    screen and (min-resolution: 192dpi),
-    screen and (min-resolution: 2dppx) {
+  @media screen and (min-device-pixel-ratio: 2) {
     background-image: linear-gradient(
         to right,
         rgba(47, 48, 58, 0.4),
@@ -43,9 +41,7 @@
       ),
       url("../img/hero/tablet/tablet1x.png");
   }
-  @media screen and (min-device-pixel-ratio: 2),
-    screen and (min-resolution: 192dpi),
-    screen and (min-resolution: 2dppx) {
+  @media screen and (min-device-pixel-ratio: 2) {
     background-image: linear-gradient(
         to right,
         rgba(47, 48, 58, 0.4),
@@ -65,9 +61,7 @@
       ),
       url("../img/hero/pc/pc.png");
   }
-  @media screen and (min-device-pixel-ratio: 2),
-    screen and (min-resolution: 192dpi),
-    screen and (min-resolution: 2dppx) {
+  @media screen and (min-device-pixel-ratio: 2) {
     background-image: linear-gradient(
         to right,
         rgba(47, 48, 58, 0.4),
