--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,7 +1,5 @@
 .modal {
-  padding: 40px 40px;
-  height: 582px;
-  width: 528px;
+  padding: 40px;
   background-color: $additional-color;
   position: absolute;
   max-width: 450px;
@@ -16,11 +14,9 @@
   }
   @media screen and (min-width: 768px) and (max-width: 1199px) {
     width: 450px;
-    top: 35%;
   }
   @media screen and (min-width: 1200px) {
     max-width: 528px;
-    top: 40%;
   }
 }
 
@@ -39,11 +35,8 @@
 }
 .button-wrapper {
   display: flex;
-  flex-direction: column;
-  position: relative;
-  &:not(:last-child) {
-    margin-bottom: 10px;
-  }
+  justify-content: center;
+  margin-top: 30px;
 }
 .form-feedback__button {
   padding: 10px 55px;
@@ -99,7 +92,9 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  margin-bottom: 28px;
+  &:not(:last-child) {
+    margin-bottom: 10px;
+  }
 }
 
 .form__wrapper:checked {
@@ -133,7 +128,6 @@
   padding-top: 12px;
   padding-bottom: 12px;
   padding-left: 44px;
-  width: 448px;
   height: 40px;
   margin-top: 4px;
   cursor: pointer;
@@ -165,7 +159,7 @@
   align-items: center;
   justify-content: center;
 }
-.checkbox {
+.form-feedback__checkbox {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -176,19 +170,23 @@
   clip: rect(0 0 0 0);
 }
 .form-feedback__image {
-  width: 16px;
-  height: 15px;
+  margin-right: 8.22px;
   border-radius: 2px;
+  background-size: contain;
   border: 2px solid $litle-text-color;
   margin-right: 8px;
+  transition-property: fill, background-color, background-image;
+  transition-duration: $transition-duration;
+  transition-timing-function: $time-function;
 }
-.checkbox:checked + .form-feedback__image {
+
+.form-feedback__checkbox:checked + .form-feedback__image {
   fill: $accent-color;
   background-color: $accent-color;
-  border: transparent;
 }
+
 .modal__close {
-  display: flex;
+  display: block;
   position: absolute;
   right: 8px;
   top: 8px;
