--- a/sass/components/_social-network.scss
+++ b/sass/components/_social-network.scss
@@ -32,3 +32,13 @@
   height: 20px;
   fill: currentColor;
 }
+
+.network__title {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: $additional-color;
+  margin-bottom: 20px;
+}
