--- a/sass/components/_contact.scss
+++ b/sass/components/_contact.scss
@@ -1,8 +1,8 @@
 .contact {
   margin-left: auto;
   @media screen and (max-width: 767px) {
-    margin-top: 302px;
-
+    margin-top: auto;
+    margin-left: 0;
     display: flex;
     flex-direction: column-reverse;
   }
@@ -61,6 +61,11 @@
     font-size: 24px;
     line-height: 1.16;
     letter-spacing: 0.02em;
+    color: $accent-color;
+  }
+}
+.contact__link-hover {
+  @media screen and (max-width: 767px) {
     color: $accent-color;
   }
 }
