--- a/sass/components/_footer-address.scss
+++ b/sass/components/_footer-address.scss
@@ -17,7 +17,7 @@
   letter-spacing: 0.03em;
   margin-top: 20px;
 }
-.address__section {
+.address__list {
   list-style-type: none;
   margin-top: 20px;
 }
@@ -38,7 +38,7 @@
     color: $accent-color;
   }
 }
-.address__text {
+.address__contact {
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
