--- a/css/main.css
+++ b/css/main.css
@@ -983,6 +983,12 @@ img {
           border-radius: 0px 0px 4px 4px;
 }
 
+@media screen and (max-width: 767px) {
+  .network {
+    margin-bottom: 60px;
+  }
+}
+
 .social-network {
   display: -webkit-box;
   display: -webkit-flex;
@@ -992,13 +998,10 @@ img {
   -webkit-justify-content: center;
       -ms-flex-pack: center;
           justify-content: center;
-  padding-left: 0;
-  margin-top: 16px;
 }
 
 .social-network__item:not(:last-child) {
   margin-right: 10px;
-  list-style: none;
 }
 
 .social-network__link {
@@ -1224,7 +1227,7 @@ img {
   margin-top: 20px;
 }
 
-.address__section {
+.address__list {
   list-style-type: none;
   margin-top: 20px;
 }
@@ -1250,7 +1253,7 @@ img {
   color: #2196f3;
 }
 
-.address__text {
+.address__contact {
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
@@ -1263,7 +1266,7 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.address__text:focus, .address__text:hover {
+.address__contact:focus, .address__contact:hover {
   color: #2196f3;
 }
 
