--- a/sass/components/_social-network.scss
+++ b/sass/components/_social-network.scss
@@ -29,6 +29,15 @@
   }
 }
 
+.social-network__link--color {
+  color: $additional-color;
+  border-radius: 50%;
+  background: rgba(255, 255, 255, 0.1);
+  &:not(:last-child) {
+    margin-right: 10px;
+  }
+}
+
 .social-network__icon {
   width: 20px;
   height: 20px;
