--- a/sass/components/_portfolio-project.scss
+++ b/sass/components/_portfolio-project.scss
@@ -36,7 +36,7 @@
   line-height: 2;
   letter-spacing: 0.06em;
   color: $litle-text-color;
-  margin: 0;
+  margin-bottom: 4px;
 }
 
 .project__text {
@@ -51,6 +51,7 @@
   margin-bottom: 30px;
 
   @media screen and (max-width: 767px) {
+    width: 450px;
     &:nth-last-child(-n + 1) {
       margin-bottom: 0px;
     }
