--- a/css/main.css
+++ b/css/main.css
@@ -1992,27 +1992,6 @@ img {
   padding-bottom: 94px;
 }
 
-.hide {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  padding: 0;
-  overflow: hidden;
-  border: 0;
-  clip: rect(0 0 0 0);
-}
-
-.section__title {
-  text-align: center;
-  margin-bottom: 50px;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.16;
-  letter-spacing: 0.03em;
-  color: #212121;
-}
-
 .section.section--background {
   background: #f5f4fa;
 }
@@ -2028,13 +2007,20 @@ img {
 }
 
 .section__title {
-  color: #212121;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
   text-align: center;
-  margin: 0;
+  color: #212121;
+  letter-spacing: 0.03em;
   margin-bottom: 30px;
+}
+
+@media screen and (max-width: 1199px) {
+  .section__title {
+    font-size: 28px;
+    line-height: 1.17;
+  }
 }
 
 @media screen and (min-width: 1200px) {
@@ -2051,6 +2037,17 @@ img {
   .section {
     padding: 60px 0;
   }
+}
+
+.section__title--hiden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 .container {
